better nav for m

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -276,8 +276,8 @@ a.modal-insp:hover {
     .doodles-nav {
       margin-left: 50px;
     }
-    .nav-menu {
-      margin-left: 40px;
+    span.nav-donate-btn {
+      margin-left: -60px;
     }
   }
 }
