--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -8,11 +8,10 @@
     <% end %>
     <li class="nav-menu-item donate<%= ' current' if current_page?('/donate') %>">
       <a href="/donate">
-        <div class="btn btn-blue nav-donate-btn">
+        <span class="btn btn-blue nav-donate-btn">
           Donate
-        </div>
+        </span>
       </a>
     </li>
   </ul>
 </div>
-
