better nav for m

--- a/app/assets/stylesheets/lessons.scss
+++ b/app/assets/stylesheets/lessons.scss
@@ -279,5 +279,8 @@ a.modal-insp:hover {
     span.nav-donate-btn {
       margin-left: -60px;
     }
+    .nav-menu {
+      margin-left: 40px;
+    }
   }
 }
