--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -349,5 +349,6 @@ $error-highlight: lighten($primary-red, 15%);
 h2.high-q {
   color: $primary-blue;
   font-weight: 800;
-  font-size: 42px;
+  font-size: 48px;
+  line-height: 1.1;
 }
