--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,19 +6,19 @@
 
 <div class="homepage">
  <section class="homepage-section">
-   <div class='homepage-content'>
+   <div class='homepage-content high-q'>
      <h2 class='high-q'>High-quality arts education for all</h2>
+     <p class="lead">
+       Our mission is to expand children's access to high-quality arts education.
+       Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of cost or zip code.
+     </p>
  </div>
  </section>
  <section class="homepage-section">
     <div class="homepage-content">
-      <div class="frame frame--16x9" style="margin: 50px 0">
+      <div class="frame frame--16x9">
         <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
-      <p class="lead">
-        Our mission is to expand children's access to high-quality arts education.
-        Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of cost or zip code.
-      </p>
     </div>
   </section>
 
