--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,7 @@
  </section>
  <section class="homepage-section">
     <div class="homepage-content">
-      <div class="frame frame--16x9">
+      <div id="first-video" class="frame frame--16x9">
         <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
     </div>
