changed header to inspiration for admin lessons

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -141,12 +141,12 @@
   </div>
 
   <div class="field">
-    <%= f.label 'Header Image Title, Artist, Year' %>
+    <%= f.label 'Inspiration Image Title, Artist, Year' %>
     <%= f.text_field :inspiration_image_title %>
    </div>
 
   <div class="field">
-    <%= f.label 'Header Image Description' %>
+    <%= f.label 'Inspiration Image Description' %>
     <%= f.text_field :inspiration_image_description %>
   </div>
 
