adding changes from Tempest

--- a/app/views/admin/lessons/_form.html.erb
+++ b/app/views/admin/lessons/_form.html.erb
@@ -78,6 +78,11 @@
     <%= f.text_field :materials %>
   </div>
 
+  <div class="field">
+    <%= f.label :materials_note %>
+    <%= f.text_field :materials_note %>
+  </div>
+
   <div>
     <div class="field photocopy-admin">
       <%= f.label "Photocopy 1" %>
@@ -153,6 +158,11 @@
   <div class="field">
     <%= f.label :video_uri, "Video URL" %>
     <%= f.text_field :video_uri %>
+  </div>
+
+  <div class="field">
+    <%= f.label :video_note %>
+    <%= f.text_field :video_note %>
   </div>
 
   <div class="field">
