--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -8,6 +8,8 @@ $primary-red: #DA232E;
 $primary-blue: #419ED5;
 $primary-yellow: #FCCC31;
 
+$warm-gray: #999;
+
 $accent-black: #000000;
 $accent-gray: #DDDEE0;
 $accent-green: #31B79A;
