--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,9 @@
 <%end %>
 
 <div class="homepage">
- <section class="homepage-section">
-   <div class='homepage-content high-q'>
-     <h2 class='high-q'>High-quality arts education for all</h2>
+ <section class="homepage-section hero white-section">
+   <div class='homepage-content hero-content white-section'>
+     <h2>High-quality arts education for all.</h2>
      <p class="lead">
        Our mission is to expand children's access to high-quality arts education.
        Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of cost or zip code.
@@ -22,27 +22,24 @@
     </div>
   </section>
 
-  <section class="homepage-section hero">
-    <%= image_tag 'quotes/imagequilt.jpg', class:"hero-img", style:"height:100%;" %>
-    <div class="homepage-content hero-content">
+  <section class="homepage-section hero white-section">
+    <div class="homepage-content hero-content white-section">
       <h2 class='jumbo'>
         Art lessons that inspire real creativity.
       </h2>
       <p class='lead'>
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
       </p>
-      <p class='lead' style="font-size: 75%">
-        Artwork from Near & Far project
-      </p>
       <div style='text-align: right;'>
-        <a class="btn btn-xl btn-yellow" href='/projects'>
+        <a class="btn btn-xl btn-warmgray" href='/projects'>
           See More Projects
         </a>
       </div>
     </div>
   </section>
-  <section class="homepage-section">
-    <div class="homepage-content">
+  <section class="homepage-section hero" style="background-color:primary-blue;">
+    <%= image_tag 'u43.png', class:"hero-img", style:"height:100%;" %>
+    <div class="homepage-content hero-content">
       <h2 class='jumbo'>
         We make high-quality art education easy.
       </h2>
@@ -51,21 +48,16 @@
           Doodles Academy brings art education to underserved students. We provide a free online curriculum and partner with schools in order to bring art classes where there would otherwise be none.
         </p>
       </div>
-      <div style='text-align: right;'>
-        <a class="btn btn-xl btn-blue" href='/projects'>
-          Go to Lesson Plans
-        </a>
-      </div>
   </section>
-  <section class="hero quote">
+  <section class="hero quote white-section">
     <div class="hero-content">
-      <div class="quote-contents"></div>
+      <div class="quote-contents" style="color:black;"></div>
     </div>
     <div class="quote-selector"></div>
   </section>
-  <section class="homepage-section bg-accent-green">
-    <div class="homepage-content">
-      <!-- <h2 style="font-size: 26px; font-weight: 500;"> -->
+  <section class="homepage-section hero">
+    <%= image_tag 'u36.png', class:"hero-img", style:"height:100%;" %>
+    <div class="homepage-content hero-content">
       <h2 class='jumbo'>
         Every student deserves art.
       </h2>
@@ -78,7 +70,7 @@
         </p>
       </div>
       <div style='text-align: right;'>
-        <a class="btn btn-xl btn-white" href="/donate">
+        <a class="btn btn-xl btn-blue" href="/donate">
           Donate Now
         </a>
       </div>
