--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -4,7 +4,7 @@
   color: white;
   padding: 20px 0 60px;
 
-  background-color: $background-purple;
+  background-color: $warm-gray;
 
   > div {
     width: $content-max-width;
@@ -12,7 +12,6 @@
   }
 
   .footer-separator {
-    border-color: $footer-grey;
     margin: 30px 0;
   }
 
@@ -20,7 +19,6 @@
 .footer-copyright {
   @include text-10;
   letter-spacing: .105em;
-  color: $footer-grey;
 }
 
 .footer-social,
