--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,8 @@
 <div class="homepage">
  <section class="homepage-section hero white-section">
    <div class='homepage-content hero-content white-section'>
-     <h2>High-quality arts education for all.</h2>
+     <!-- <h2>High-quality arts education for all.</h2> -->
+     <h2>Quality arts education for all.</h2>
      <p class="lead">
        Our mission is to expand children's access to high-quality arts education.
        Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of cost or zip code.
@@ -25,12 +26,13 @@
   <section class="homepage-section hero white-section">
     <div class="homepage-content hero-content white-section">
       <h2 class='jumbo'>
-        Art lessons that inspire real creativity.
+        <!-- Art lessons that inspire real creativity. -->
+        Lessons that inspire creativity.
       </h2>
       <p class='lead'>
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
       </p>
-      <div style='text-align: right;'>
+      <div>
         <a class="btn btn-xl btn-warmgray" href='/projects'>
           See More Projects
         </a>
@@ -41,7 +43,8 @@
     <%= image_tag 'u43.png', class:"hero-img", style:"height:100%;" %>
     <div class="homepage-content hero-content">
       <h2 class='jumbo'>
-        We make high-quality art education easy.
+        <!-- We make high-quality art education easy. -->
+        Art education made easy.
       </h2>
       <div>
         <p class='lead'>
@@ -49,10 +52,18 @@
         </p>
       </div>
   </section>
-  <section class="hero quote white-section">
-    <div class="hero-content">
-      <div class="quote-contents" style="color:black;"></div>
+  <section class="homepage-section hero quote white-section">
+    <div class="homepage-content hero-content">
+      <h2 class='jumbo'>Testimonials</h2>
+      <div class="left-arrow">
+        <%= image_tag 'left-arrow.png' %>
+      </div>
+      <blockquote id="testimonials">
+        <div class="quote-contents"></div>
+      </blockquote>
+      <div class="quote-sayer"></div>
     </div>
+
     <div class="quote-selector"></div>
   </section>
   <section class="homepage-section hero">
@@ -63,14 +74,11 @@
       </h2>
       <div>
         <p class='lead'>
-         Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of school budget, zip code, or student demographics.
-        </p>
-        <p class='lead'>
          Donations help us develop and offer our free classes and free online curriculum, bringing high-quality art education to students everywhere.
         </p>
       </div>
-      <div style='text-align: right;'>
-        <a class="btn btn-xl btn-blue" href="/donate">
+      <div>
+        <a class="btn btn-xl btn-white" href="/donate">
           Donate Now
         </a>
       </div>
