--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,6 +29,23 @@
         <!-- Art lessons that inspire real creativity. -->
         Lessons that inspire creativity.
       </h2>
+      <div id="lesson-gallery">
+        <div class="left-arrow">
+          <a><%= image_tag 'left-arrow.png' %></a>
+        </div>
+        <div class='gal'>
+          <%= image_tag 'gal1.png' %>
+        </div>
+        <div class='gal'>
+          <%= image_tag 'gal2.jpg' %>
+        </div>
+        <div class='gal'>
+          <%= image_tag 'gal3.png' %>
+        </div>
+        <div class="right-arrow">
+          <a><%= image_tag 'right-arrow.png' %></a>
+        </div>
+      </div
       <p class='lead'>
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
       </p>
