--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <%end %>
 
 <div class="homepage">
- <section class="homepage-section hero white-section">
+ <section class="homepage-section hero white-section" id="high-quality">
    <div class='homepage-content hero-content white-section'>
      <!-- <h2>High-quality arts education for all.</h2> -->
      <h2>Quality arts education for all.</h2>
@@ -25,7 +25,7 @@
 
   <section class="homepage-section hero white-section">
     <div class="homepage-content hero-content white-section">
-      <h2 class='jumbo'>
+      <h2 class='jumbo' id="lessons-that-inspire">
         <!-- Art lessons that inspire real creativity. -->
         Lessons that inspire creativity.
       </h2>
@@ -45,8 +45,8 @@
         <div class="right-arrow">
           <a><%= image_tag 'right-arrow.png' %></a>
         </div>
-      </div
-      <p class='lead'>
+      </div>
+      <p class='lead' id="doodles-provides">
         Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
       </p>
       <div>
