--- a/app/assets/stylesheets/quotes.scss
+++ b/app/assets/stylesheets/quotes.scss
@@ -1,122 +1,122 @@
-.quote-contents {
-  @include primary-font;
-  font-size: 26px;
-  line-height: 1.6em;
-  font-weight: 400;
-  // font-style: italic;
-  text-transform: none;
-  transition: opacity 300ms ease;
-
-  // background-color: $warm-gray;
-  // color: white;
-  // padding: 10px;
-  // border-radius: 30px;
-  margin: 40px;
-
-  &.is-hidden {
-    opacity: 0;
-  }
-}
-
-.quote-person {
-  display: block;
-  font-size: 1em;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-style: normal;
-  margin-top: 20px;
-}
-
-.quote-selector {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  margin-bottom: 3em;
-  transform: translate3d(-50%, 0, 0);
-}
-
-.quote-selector-bubble {
-  font-size: 4em;
-  font-style: normal;
-  margin-right: 0.1em;
-  opacity: 0.5;
-  transition: opacity 200ms ease;
-
-  &:last-child {
-   margin-right: 0;
-  }
-  &.is-active,
-  &:hover {
-    opacity: 1;
-  }
-  &:hover {
-    cursor: pointer;
-  }
-}
-
-#testimonials {
-  max-width: 650px;
-  height: 350px;
-  background-color: $warm-gray;
-  color: white;
-  padding: 10px;
-  border-radius: 10px;
-  border: none;
-  font-style: normal;
-}
-
-#testimonials:after {
-    content: "";
-    position: absolute;
-    bottom: 170px;
-    left: 555px;
-    border-width: 60px 40px 0;
-    border-style: solid;
-    border-color: $warm-gray transparent;
-}
-
-.quote-sayer {
-  text-align: right;
-  margin-top: 450px;
-  margin-right: 55px;
-  text-transform: uppercase;
-}
-
-.homepage-content .quote-sayer p {
-  font-weight: 800;
-  color: $primary-blue;
-}
-
-.left-arrow, .right-arrow {
-  background-color: white;
-  img {
-    opacity: 0.2;
-    filter: alpha(opacity=80);
-  }
-}
-
-.quote-block {
-  margin-left: -75px;
-  width: 900px;
-  clear: both;
-  .left-arrow, .right-arrow {
-    width: 130px;
-    float: left;
-  }
-  .left-arrow {
-    margin-top: 137px;
-  }
-  .right-arrow {
-    margin-top: 130px;
-  }
-  #testimonials {
-    width: 640px;
-    float: left;
-  }
-}
-
-.dots {
-  img {
-    padding-right: 10px;
-  }
-}
+// .quote-contents {
+//   @include primary-font;
+//   font-size: 26px;
+//   line-height: 1.6em;
+//   font-weight: 400;
+//   // font-style: italic;
+//   text-transform: none;
+//   transition: opacity 300ms ease;
+//
+//   // background-color: $warm-gray;
+//   // color: white;
+//   // padding: 10px;
+//   // border-radius: 30px;
+//   margin: 40px;
+//
+//   &.is-hidden {
+//     opacity: 0;
+//   }
+// }
+//
+// .quote-person {
+//   display: block;
+//   font-size: 1em;
+//   font-weight: 600;
+//   text-transform: uppercase;
+//   font-style: normal;
+//   margin-top: 20px;
+// }
+//
+// .quote-selector {
+//   position: absolute;
+//   bottom: 0;
+//   left: 50%;
+//   margin-bottom: 3em;
+//   transform: translate3d(-50%, 0, 0);
+// }
+//
+// .quote-selector-bubble {
+//   font-size: 4em;
+//   font-style: normal;
+//   margin-right: 0.1em;
+//   opacity: 0.5;
+//   transition: opacity 200ms ease;
+//
+//   &:last-child {
+//    margin-right: 0;
+//   }
+//   &.is-active,
+//   &:hover {
+//     opacity: 1;
+//   }
+//   &:hover {
+//     cursor: pointer;
+//   }
+// }
+//
+// #testimonials {
+//   max-width: 650px;
+//   height: 350px;
+//   background-color: $warm-gray;
+//   color: white;
+//   padding: 10px;
+//   border-radius: 10px;
+//   border: none;
+//   font-style: normal;
+// }
+//
+// #testimonials:after {
+//     content: "";
+//     position: absolute;
+//     bottom: 170px;
+//     left: 555px;
+//     border-width: 60px 40px 0;
+//     border-style: solid;
+//     border-color: $warm-gray transparent;
+// }
+//
+// .quote-sayer {
+//   text-align: right;
+//   margin-top: 450px;
+//   margin-right: 55px;
+//   text-transform: uppercase;
+// }
+//
+// .homepage-content .quote-sayer p {
+//   font-weight: 800;
+//   color: $primary-blue;
+// }
+//
+// .left-arrow, .right-arrow {
+//   background-color: white;
+//   img {
+//     opacity: 0.2;
+//     filter: alpha(opacity=80);
+//   }
+// }
+//
+// .quote-block {
+//   margin-left: -75px;
+//   width: 900px;
+//   clear: both;
+//   .left-arrow, .right-arrow {
+//     width: 130px;
+//     float: left;
+//   }
+//   .left-arrow {
+//     margin-top: 137px;
+//   }
+//   .right-arrow {
+//     margin-top: 130px;
+//   }
+//   #testimonials {
+//     width: 640px;
+//     float: left;
+//   }
+// }
+//
+// .dots {
+//   img {
+//     padding-right: 10px;
+//   }
+// }
