--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,114 +1,89 @@
 <% content_for (:hero_content) { image_tag 'doodle_white.png', size: "350" } %>
 <% content_for :hero_content do %>
- <h2 style="margin-top: -50px;"> Students aren't carbon copies.</h2>
- <h2 style="margin-top: -10px;"> Why should their art be? </h2>
 <%end %>
 
 <div class="homepage">
- <section class="homepage-section hero white-section" id="high-quality">
-   <div class='homepage-content hero-content white-section'>
-     <!-- <h2>High-quality arts education for all.</h2> -->
-     <h2>Quality arts education for all.</h2>
-     <p class="lead">
-       Our mission is to expand children's access to high-quality arts education.
-       Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving, irrespective of cost or zip code.
-     </p>
- </div>
- </section>
- <section class="homepage-section">
+
+  <section>
     <div class="homepage-content">
-      <div id="first-video" class="frame frame--16x9">
-        <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-      </div>
-    </div>
-  </section>
-
-  <section class="homepage-section hero white-section">
-    <div class="homepage-content hero-content white-section">
-      <h2 class='jumbo' id="lessons-that-inspire">
-        <!-- Art lessons that inspire real creativity. -->
-        Lessons that inspire creativity.
-      </h2>
-      <div id="lesson-gallery">
-        <div class="left-arrow">
-          <a><%= image_tag 'left-arrow.png' %></a>
-        </div>
-        <div class='gal'>
-          <%= image_tag 'gal1.png' %>
-        </div>
-        <div class='gal'>
-          <%= image_tag 'gal2.jpg' %>
-        </div>
-        <div class='gal'>
-          <%= image_tag 'gal3.png' %>
-        </div>
-        <div class="right-arrow">
-          <a><%= image_tag 'right-arrow.png' %></a>
-        </div>
-      </div>
-      <p class='lead' id="doodles-provides">
-        Doodles provides high-quality art education that inspires and rewards individual creativity, growth, and problem solving.
+      <h2>Students aren't carbon copies, why should their art be?</h2>
+      <p>
+        With Doodles Academy, educators of all backgrounds can offer their students a comprehensive, standards-aligned, open-ended curriculum with excellence and ease.
       </p>
-      <div>
-        <a class="btn btn-xl btn-warmgray" href='/projects'>
-          See More Projects
-        </a>
-      </div>
     </div>
   </section>
-  <section class="homepage-section hero" style="background-color:primary-blue;">
-    <%= image_tag 'u43.png', class:"hero-img", style:"height:100%;" %>
-    <div class="homepage-content hero-content">
-      <h2 class='jumbo'>
-        <!-- We make high-quality art education easy. -->
-        Art education made easy.
-      </h2>
-      <div>
-        <p class='lead'>
-          Doodles Academy brings art education to underserved students. We provide a free online curriculum and partner with schools in order to bring art classes where there would otherwise be none.
-        </p>
-      </div>
-  </section>
-  <section class="homepage-section hero quote white-section">
-    <div class="homepage-content hero-content">
-      <h2 class='jumbo'>Testimonials</h2>
-      <div class="quote-block">
-        <div class="left-arrow">
-          <a id="left-arrow"><%= image_tag 'left-arrow.png' %></a>
-        </div>
-        <blockquote id="testimonials">
-          <div class="quote-contents"></div>
-        </blockquote>
-        <div class="right-arrow">
-          <a id="right-arrow"><%= image_tag 'right-arrow.png' %></a>
-        </div>
-      </div>
-      <div class="quote-sayer"></div>
-      <div class='dots'>
-        <a id='dot0'><%= image_tag 'dot.png'%></a>
-        <a id='dot1'><%= image_tag 'dot.png'%></a>
-        <a id='dot2'><%= image_tag 'dot.png'%></a>
-      </div>
-    </div>
 
-    <!-- <div class="quote-selector"></div> -->
+  <section>
+    <h2 style="text-align:center;font-size:60px;">HOLD FOR GALLERY</h2>
   </section>
-  <section class="homepage-section hero">
-    <%= image_tag 'u36.png', class:"hero-img", style:"height:100%;" %>
-    <div class="homepage-content hero-content">
-      <h2 class='jumbo'>
-        Every student deserves art.
-      </h2>
-      <div>
-        <p class='lead'>
-         Donations help us develop and offer our free classes and free online curriculum, bringing high-quality art education to students everywhere.
-        </p>
-      </div>
-      <div>
-        <a class="btn btn-xl btn-white" href="/donate">
-          Donate Now
-        </a>
-      </div>
+
+  <section>
+    <div class="homepage-content">
+      <h2>The Doodles Difference</h2>
+      <p>
+        Doodles Academy provides an online curriculum that includes video examples, lesson plans, supply lists, and links to Common Core and Visual Art standards.  We make it easy for educators of all types and experience levels to bring a comprehensive and open-ended curriculum to their students.
+      </p>
+      <p>
+        Our projects allow room for every child to tell her own story.  We provide lessons that scaffold skills and ideas, challenging students to think complexly, but chunking it down so that they don't become overwhelmed.  Discussion and exploration is built into each project, encouraging students to find their own creative solutions.
+      </p>
     </div>
   </section>
+
+  <section>
+     <div class="homepage-content">
+       <div>
+         <iframe src="<%= @intro_video_url %>" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+       </div>
+     </div>
+   </section>
+
+   <section>
+     <div class="homepage-content">
+       <h2>High quality art education for all.</h2>
+       <p>
+         Our mission is to expand children's access to high-quality arts education.
+       </p>
+       <p>
+         Our vision is that every child receives an arts education that inspires and rewards creativity, growth and problem solving.
+       </p>
+     </div>
+   </section>
+
+   <section class="image-background-section">
+     <div class="background-image-color">
+       <%= image_tag 'u43.png' %>
+     </div>
+     <div class="homepage-content">
+       <h2>
+         Art is not optional.
+       </h2>
+       <p>
+         Students engaged in the arts consistently score higher on standardized tests, stay in school longer, and pursue more advanced degrees.
+       </p>
+       <p>
+         We offer our complete program on a donation basis, no strings attached, to any family, school, or community center that needs it.
+       </p>
+       <p>
+         Without donations, this would be impossible.
+       </p>
+   </section>
+
+   <section>
+     <div class="homepage-content">
+       <h2>Testimonials</h2>
+       <blockquote>
+         <div id="quotes">
+           <p></p>
+         </div>
+       </blockquote>
+       <div class="quoted-parent"></div>
+       <div class='dots'>
+         <a id='dot0'><%= image_tag 'dot.png'%></a>
+         <a id='dot1'><%= image_tag 'dot.png'%></a>
+         <a id='dot2'><%= image_tag 'dot.png'%></a>
+       </div>
+     </div>
+   </section>
+
+
 </div>
