--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,7 +14,7 @@
 <h2>The Impact of Art</h2>
 <p>As funding continues to fall, the recognition of how vital arts education is continues to grow. Students who are given a high-quality arts education perform better on standardized tests. They develop creative problem solving, independent thinking, and growth mindset. Let Doodles Academy help you offer the best to your students.</p>
 
-<section class="homepage-section">
+<section style="padding: 100px 0 150px;">
   <div class="homepage-content" style="text-align: center;">
     <div style="display: inline">
       <a class="btn btn-xl btn-gray" style="color:gray;" href='/projects'>
