--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -66,6 +66,9 @@
        <p>
          Without donations, this would be impossible.
        </p>
+       <a class="btn btn-xl btn-white" href="/donate">
+         Donate Now
+       </a>
    </section>
 
    <section>
