--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -37,3 +37,24 @@
   height: 20px;
   width: 20px;
 }
+
+#subscription_email {
+  background-color: white;
+  color: black;
+
+  &::-webkit-input-placeholder {
+     color: $warm-gray;
+  }
+
+  &:-moz-placeholder { /* Firefox 18- */
+     color: $warm-gray;
+  }
+
+  &::-moz-placeholder {  /* Firefox 19+ */
+     color: $warm-gray;
+  }
+
+  &:-ms-input-placeholder {
+     color: $warm-gray;
+  }
+}
