--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,31 @@
     <h2 style="text-align:center;font-size:60px;">HOLD FOR GALLERY</h2>
   </section>
 
+  <!-- <section>
+    <div class="homepage-content">
+      <div id="lesson-gallery">
+        <div class="left-arrow">
+          <a><%= image_tag 'left-arrow.png' %></a>
+        </div>
+        <div class='gal'>
+          <%= image_tag 'gal1.png' %>
+        </div>
+        <div class='gal'>
+          <%= image_tag 'gal2.jpg' %>
+        </div>
+        <div class='gal'>
+          <%= image_tag 'gal3.png' %>
+        </div>
+        <div class="right-arrow">
+          <a><%= image_tag 'right-arrow.png' %></a>
+        </div>
+      </div>
+      <a class="btn btn-xl btn-warmgray" href='/projects'>
+        See More Projects
+      </a>
+    </div>
+  </section> -->
+
   <section>
     <div class="homepage-content">
       <h2>The Doodles Difference</h2>
